Version 1.1.15 (released ??-???-????)

  * 

Version 1.1.14 (released 12-Jun-2012)

  * fix annotation of svn files with non-URI-safe paths (issue #504)
  * handle file:/// Subversion rootpaths as local roots (issue #446)
  * fix bug caused by trying to case-normalize anon usernames (issue #505)
  * speed up log handling by reusing tokenization results (issue #506)
  * add support for custom review log markup rules (issue #429)

Version 1.1.13 (released 23-Jan-2012)

  * fix svndbadmin failure on deleted paths under Subversion 1.7 (issue #499)
  * fix annotation of files in svn roots with non-URI-safe paths
  * fix stray annotation warning in markup display of images
  * more gracefully handle attempts to display binary content (issue #501)

Version 1.1.12 (released 03-Nov-2011)

  * fix path display in patch and certain diff views (issue #485)
  * fix broken cvsdb glob searching (issue 486)
  * allow svn revision specifiers to have leading r's (issue #441, #448) 
  * allow environmental override of configuration location (issue #494)
  * fix exception HTML-escaping non-string data under WSGI (issue #454)
  * add links to root logs from roots view (issue #470)
  * use Pygments lexer-guessing functionality (issue #495)

Version 1.1.11 (released 17-May-2011)

  * security fix: remove user-reachable override of cvsdb row limit
  * fix broken standalone.py -c and -d options handling
  * add --help option to standalone.py
  * fix stack trace when asked to checkout a directory (issue #478)
  * improve memory usage and speed of revision log markup (issue #477)
  * fix broken annotation view in CVS keyword-bearing files (issue #479)
  * warn users when query results are incomplete (issue #433)
  * avoid parsing errors on RCS newphrases in the admin section (issue #483)
  * make rlog parsing code more robust in certain error cases (issue #444)

Version 1.1.10 (released 15-Mar-2011)

  * fix stack trace in Subversion revision info logic (issue #475, issue #476)
